RESOLVED FIXED168952
WKPageIsPlayingVideoInEnhancedFullscreen availability mismatch
https://bugs.webkit.org/show_bug.cgi?id=168952
Summary WKPageIsPlayingVideoInEnhancedFullscreen availability mismatch
Alexey Proskuryakov
Reported 2017-02-27 17:19:05 PST
WKPageIsPlayingVideoInEnhancedFullscreen is declared for macOS and iOS, but it is only implemented for macOS. The reason is that TARGET_OS_MAC is true for both.
Attachments
proposed patch (1.20 KB, patch)
2017-02-27 17:21 PST, Alexey Proskuryakov
no flags
Alexey Proskuryakov
Comment 1 2017-02-27 17:21:00 PST
Created attachment 302898 [details] proposed patch
Aakash Jain
Comment 2 2017-02-27 17:26:31 PST
unofficial r+.
WebKit Commit Bot
Comment 3 2017-02-27 18:10:17 PST
Comment on attachment 302898 [details] proposed patch Clearing flags on attachment: 302898 Committed r213112: <http://trac.webkit.org/changeset/213112>
WebKit Commit Bot
Comment 4 2017-02-27 18:10:21 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.