WKPageIsPlayingVideoInEnhancedFullscreen availability mismatch https://bugs.webkit.org/show_bug.cgi?id=168952

Reviewed by Dan Bernstein.

* UIProcess/API/C/mac/WKPagePrivateMac.h: TARGET_OS_MAC is not the right thing to
check, as it's true on both macOS and iOS.


Canonical link: https://commits.webkit.org/185943@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213112 268f45cc-cd09-0410-ab3c-d52691b4dbfc