Source/WebKit2/UIProcess/API/C/mac/WKPagePrivateMac.h
@@ -63,7 +63,7 @@ WK_EXPORT id <_WKFullscreenDelegate> WKPageGetFullscreenDelegate(WKPageRef page)
 
 WK_EXPORT bool WKPageIsURLKnownHSTSHost(WKPageRef page, WKURLRef url);
 
-#if TARGET_OS_MAC
+#if !TARGET_OS_IPHONE
 WK_EXPORT bool WKPageIsPlayingVideoInEnhancedFullscreen(WKPageRef page);
 #endif
 
